--- a/com.cyt.music.webapp/src/main/webapp/htmlDemo/bootDemo.html
+++ b/com.cyt.music.webapp/src/main/webapp/htmlDemo/bootDemo.html
@@ -52,7 +52,7 @@ function initTable() {
         showRefresh: true,  //显示刷新按钮  
         sidePagination: "server", //设置为服务器端分页  
         //设置为undefined可以获取pageNumber，pageSize，searchText，sortName，sortOrder  
-        //设置为limit可以获取limit, offset, search, sort, order  
+        //设置为limit可以获取limit, offset, search, sort, Order
         queryParamsType :'limit',   
         queryParams: queryParams,  
         onLoadSuccess: function(data){  //加载成功时执行  
