--- a/com.cyt.music.webapp/src/main/webapp/screens/order/order.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/order.html
@@ -92,8 +92,20 @@
 			<input type="hidden" name="cmd" value="_s-xclick">
 			<input type="hidden" name="hosted_button_id" value="9X4VPAFMSHAKQ">
 			<input type="image" src="https://www.paypalobjects.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
-			< img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
+			<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1"/>
 		</form>
+
+
+		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="XN65M4S3NS5FL">
+			<input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
+			<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
+		</form>
+
+		<br>用户姓名<input type="text" name="name" id="name" value=""/></br>
+		<br>用户状态<input type="text" name="phone" id="phone" value="" /></br>
+		<br><input type="button" name="btn" id="btn" value="保存" onclick="demoQuery()"/></br>
 
 		<!-- common -->
 		<script src="../../js/common.js"></script>
@@ -115,7 +127,7 @@
 					showRefresh: true,  //显示刷新按钮
 					sidePagination: "server", //设置为服务器端分页
 					//设置为undefined可以获取pageNumber，pageSize，searchText，sortName，sortOrder
-					//设置为limit可以获取limit, offset, search, sort, order
+					//设置为limit可以获取limit, offset, search, sort, Order
 					queryParamsType :'limit',
 					queryParams: queryParams,
 					onLoadSuccess: function(data){  //加载成功时执行
@@ -138,6 +150,7 @@
 			$(document).ready(function () {
 				//调用函数，初始化表格
 				initTable();
+
 			});
 
 			$(window).load(function() {
@@ -171,6 +184,19 @@
 				},
 
 			};
+
+
+			function demoQuery(){
+				$.ajax({
+					type:'post',
+					url:"http://localhost:8080/"+"order/saveCustomInfo.action",
+					contentType:'application/json;charset=utf-8',
+					dataType:"json",
+					//数据格式是json串，商品信息
+					data:JSON.stringify({name:$("input[name='name']").val(),phone:$("input[name='phone']").val()}),
+					success:function(data){//返回json结果
+					}});
+			}
 		</script>
 </body>
 <script>
