--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -17,7 +17,7 @@
             </ul>
         </header>
         <section class="home-img-area">
-            <img src="../../img/images/bg/banner01_1920_1300.png" alt="" class="home-main-image">
+            <img src="../../img/images/bg/banner01_1920_1300.jpg" alt="" class="home-main-image">
         </section>
         <section class="home-section section-one">
             <div class="home-section-body">
@@ -98,7 +98,7 @@
             </div>
         </section>
         <section class="home-img-area footer-img">
-            <img src="../../img/images/home/1_03_1920_1250.png" alt="" class="home-main-image">
+            <img src="../../img/images/home/1_03_1920_1250.jpg" alt="" class="home-main-image">
         </section>
     </div>
     <script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
