--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -617,11 +617,11 @@
     </div>
     <div class="m-bg-slide">
         <ul>
-            <li class="current" style="background: url('../../img/images/bg/banner02_1920_1800.png') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner03_1920_1800.png') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner04_1920_1800.png') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner05_1920_1800.png') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner06_1920_1800.png') no-repeat;background-size: 100% auto;"></li>
+            <li class="current" style="background: url('../../img/images/bg/banner02_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('../../img/images/bg/banner03_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('../../img/images/bg/banner04_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('../../img/images/bg/banner05_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('../../img/images/bg/banner06_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
         </ul>
     </div>
     <div class="modal-view-point">
