--- a/com.cyt.music.webapp/src/main/webapp/screens/order/order.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/order.html
@@ -189,7 +189,7 @@
 			function demoQuery(){
 				$.ajax({
 					type:'post',
-					url:"http://localhost:8080/"+"order/saveCustomInfo.action",
+					url:urlConfig+"order/saveCustomInfo.action",
 					contentType:'application/json;charset=utf-8',
 					dataType:"json",
 					//数据格式是json串，商品信息
