表单页面修改

--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -20,7 +20,7 @@
             <div class="m-brief">
                 <p class="m-brief-title">奇幻之旅，由此开始。</p>
                 <p class="m-brief-content">此处还需要一些装饰文本</p>
-                <a class="m-brief-btn" href="../../demo.html"><label>€2699</label>即刻启动▶</a>
+                <a class="m-brief-btn" href="../../screens/order/orderPay.html"><label>€2699</label>即刻启动▶</a>
             </div>
             <div class="m-container">
                 <ul class="m-nav" role="tablist">
