--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -129,11 +129,11 @@
                     </div>
                     <div role="tabpanel" class="m-pane fade in" id="viewpoint">
                         <div class="viewpoint__container">
-                            <div class="m-pane-title">
-                                <p>我是炫酷的标题文字：</p>
-                                <p>The words can only tell a part of the sights, and everything you will see is far beyong your imagination.</p>
-                                <p>Words can tell nothing, what we can promise is that everything is far beyong your imagination.</p>
-                            </div>
+                            <!--<div class="m-pane-title">-->
+                                <!--<p>我是炫酷的标题文字：</p>-->
+                                <!--<p>The words can only tell a part of the sights, and everything you will see is far beyong your imagination.</p>-->
+                                <!--<p>Words can tell nothing, what we can promise is that everything is far beyong your imagination.</p>-->
+                            <!--</div>-->
                             <div class="m-pane-body">
                                 <div class="m-scene-card card-more-info"  data-title="hkzj">
                                     <div class="card-cover">
@@ -339,10 +339,10 @@
                     </div>
                     <div role="tabpanel" class="m-pane" id="hotel">
                         <div class="hotel__container">
-                            <div class="m-pane-title">
-                                <p>我是炫酷的标题文字：</p>
-                                <p>寻找最舒适便捷的旅行休憩港湾，将各地的风情与特色为您一一呈现</p>
-                            </div>
+                            <!--<div class="m-pane-title">-->
+                                <!--<p>我是炫酷的标题文字：</p>-->
+                                <!--<p>寻找最舒适便捷的旅行休憩港湾，将各地的风情与特色为您一一呈现</p>-->
+                            <!--</div>-->
                             <div class="m-pane-body">
                                 <div class="m-hotel-aside">
                                     <div class="m-hotel-body">
