--- a/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
@@ -101,33 +101,32 @@
         <!--<div>-->
             <!--<input type="submit" value="Send Message">-->
         <!--</div>-->
-        <br><input type="button" name="btn" id="btn" value="保存" onclick="demoQuery2()"/></br>
-        <!--<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">-->
-            <!--<input type="hidden" name="cmd" value="_s-xclick">-->
-            <!--<input type="hidden" name="hosted_button_id" value="XN65M4S3NS5FL">-->
-            <!--<input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">-->
-            <!--<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">-->
-        <!--</form>-->
+        <br><input type="submit" name="btn" id="btn" value="保存" onclick="demoQuery2()"/></br>
 
-        <form class="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="J2V78NK99E7NY">
-            <table>
-                <tr><td><input type="hidden" name="on0" value="参团人数">参团人数</td></tr><tr><td><select name="os0">
-                <option value="1人">1人 € 10.00 EUR</option>
-                <option value="2人">2人 € 20.00 EUR</option>
-                <option value="3人">3人 € 30.00 EUR</option>
-            </select> </td></tr>
-            </table>
-            <input type="hidden" name="currency_code" value="EUR">
-            <input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
-            <img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
-        </form>
-
-        <div id="suc" style="display:none;">支付成功了</div>
-        <div id="fai" style="display:none;">很抱歉,支付失败了</div>
     </fieldset>
 </form>
+<form class="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="XN65M4S3NS5FL">
+    <input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
+<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
+</form>
+<!--<form class="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">-->
+    <!--<input type="hidden" name="cmd" value="_s-xclick">-->
+    <!--<input type="hidden" name="hosted_button_id" value="J2V78NK99E7NY">-->
+    <!--<table>-->
+        <!--<tr><td><input type="hidden" name="on0" value="参团人数">参团人数</td></tr><tr><td><select name="os0">-->
+        <!--<option value="1人">1人 € 10.00 EUR</option>-->
+        <!--<option value="2人">2人 € 20.00 EUR</option>-->
+        <!--<option value="3人">3人 € 30.00 EUR</option>-->
+    <!--</select> </td></tr>-->
+    <!--</table>-->
+    <!--<input type="hidden" name="currency_code" value="EUR">-->
+    <!--<input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">-->
+    <!--<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">-->
+<!--</form>-->
+<div id="suc" style="display:none;">支付成功了</div>
+<div id="fai" style="display:none;">很抱歉,支付失败了</div>
 <script src="../../js/config.js"></script>
 <script>
 //    var roomType = "";
@@ -161,7 +160,9 @@
         $("input[name='cd-name']").val($.cookie("name"));
         $("input[name='cd-phone']").val($.cookie("phone"));
         $("input[name='cd-email']").val($.cookie("email"));
-        $("#budget").val($.cookie("personNum"));
+        if(typeof($.cookie("personNum"))!="undefined"){
+            $("#budget").val($.cookie("personNum"));
+        }
         $("input[name='cd-passport']").val($.cookie("passport"));
         if($.cookie("roomType")=="2"){
             $("#cd-radio-2").attr("checked","checked");
