--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -520,11 +520,11 @@
                     </div>
                     <div role="tabpanel" class="m-pane" id="comment">
                         <div class="comment__container">
-                            <div class="m-pane-title">
-                                <p>我是炫酷的标题文字：</p>
-                                <p>我是更加炫酷的装饰性说明文字嘿嘿嘿！我是更加炫酷的装饰性说明文字嘿嘿嘿！我是更加炫酷的装饰性说明文字嘿嘿嘿！</p>
-                                <p>我是更加炫酷的装饰性说明文字嘿嘿嘿！我是更加炫酷的装饰性说明文字嘿嘿嘿！！</p>
-                            </div>
+                            <!--<div class="m-pane-title">-->
+                                <!--<p>我是炫酷的标题文字：</p>-->
+                                <!--<p>我是更加炫酷的装饰性说明文字嘿嘿嘿！我是更加炫酷的装饰性说明文字嘿嘿嘿！我是更加炫酷的装饰性说明文字嘿嘿嘿！</p>-->
+                                <!--<p>我是更加炫酷的装饰性说明文字嘿嘿嘿！我是更加炫酷的装饰性说明文字嘿嘿嘿！！</p>-->
+                            <!--</div>-->
                             <div class="m-pane-body">
                                 <div class="m-comment-aside">
                                     <div class="m-comment-card">
@@ -618,7 +618,7 @@
     <div class="m-bg-slide">
         <ul>
             <li class="current" style="background: url('../../img/images/bg/banner02_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
-            <li style="background: url('../../img/images/bg/banner03_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
+            <li style="background: url('../../img/images/bg/banner03_1920_1300.jpg') no-repeat;background-size: 100% auto; margin-top: -200px"></li>
             <li style="background: url('../../img/images/bg/banner04_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
             <li style="background: url('../../img/images/bg/banner05_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
             <li style="background: url('../../img/images/bg/banner06_1920_1300.jpg') no-repeat;background-size: 100% auto;"></li>
